--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,80 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+
+.main-grid-container {
+    margin: 0 10% 0 10%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(2, 1fr));
+    padding: 0;
+    margin-bottom: 100px;
+}
+
+header {
+    font-size: 55px;
+    text-align: center;
+    font-family: fantasy;
+    padding: 15px 0 0 0;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    /* or use grid-column-grid: -1; */
+}
+
+.slide-container {
+    padding-top: 30px;
+    text-align: center;
+}
+
+.display-size {
+    font-size: 25px;
+}
+
+
+/* CSS */
+
+.button-28,
+.slider-container,
+.color-picker {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+    margin-bottom: 20px;
+}
+
+.button-28:disabled {
+    pointer-events: none;
+}
+
+.button-28:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.button-28:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
