--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 h1 {
     font-size: 90px;
     text-align: center;
+    padding-bottom: 30px;
 }
 
 #main-grid-container {
